# wildrose

./: .gitignore  pyproject.toml  项目日记.md
backtest/: 018_report_summary.json  019_report_summary.json  README.md  prod_v0_full_year_summary.json
best_point/: labeler.py
configs/: best_point_signal_v017.json  best_point_signal_v017_major_legs.json  best_point_signal_v018_long_horizon.json  best_point_signal_v019_slow_up_long_horizon.json  trading_rule_v014_aggressive.json  trading_rule_v014_aggressive_tuned.json  trading_rule_v014_conservative.json  trading_rule_v014a_downside_protection_0062e.json  trading_rule_v014a_downside_protection_tuned_0062e.json  trading_rule_v014b_trend_hold_0062e.json  trading_rule_v014b_trend_hold_tuned_0062e.json  trading_rule_v015_crash_regime_0062e.json  trading_rule_v016_trend_signal_0062e.json  trading_rule_v016_trend_signal_tuned2_0062e.json  trading_rule_v016_trend_signal_tuned_0062e.json  trading_rule_v018_lifecycle_0062e.json  trading_rule_v018_lifecycle_tuned2_0062e.json  trading_rule_v018_lifecycle_tuned_0062e.json  trading_rule_v019_slow_uptrend_0062e.json  trading_rule_v019_slow_uptrend_trade_0062e.json  trading_rule_v019_slow_uptrend_tuned_0062e.json  trading_rule_v020_best_point_tuned_0062e.json  trading_rule_v020_trend_segment_0062e.json  trading_rule_v020_trend_segment_tuned_0062e.json  trading_rule_v021_full_bias_0062e.json  trading_rule_v021_open_bias_0062e.json  trading_rule_v021_open_size_bias_0062e.json  trading_rule_v021_trend_bias_0062e.json  trading_rule_v023_baseline_0062e.json  trading_rule_v023_phase1a1_0062e.json  (+21 more)
(+1134 files in other folders)
